Closed Bug 1632960 Opened 6 years ago Closed 6 years ago

WARNING: '!browsingContext'

Categories

(Toolkit :: General, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox-esr68 --- unaffected
firefox75 --- unaffected
firefox76 --- unaffected
firefox77 --- fixed

People

(Reporter: evilpies, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [qa-77b-p2])

Attachments

(1 file)

I get at least 20 of these warnings from nsPresContext::RecomputeBrowsingContextDependentData during startup:

WARNING: '!browsingContext', file /home/tom/projects/central/layout/base/nsPresContext.cpp, line 736

Flags: needinfo?(emilio)

This is useful to debug issues with zoom, but it is very spammy because
it can happen in legitimate situations, and it's not high-value enough.

Flags: needinfo?(emilio)
Assignee: nobody → emilio
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Whiteboard: [qa-77b-p2]
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: