Bug 1632960 - Remove warning that spams unnecessarily.

This is useful to debug issues with zoom, but it is very spammy because
it can happen in legitimate situations, and it's not high-value enough.

Differential Revision: https://phabricator.services.mozilla.com/D72448